white space fix1

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 p, li {
@@ -17,7 +18,6 @@ p, li {
 
 .header {
   height: 50vh;
-  width: 100vw;
   min-height: 200px;
   background-color: #00998d;
   padding-left: 5%;
